# pwnagent

./: .env.example  .gitignore  README.md  README_CN.md  config.yaml  install.sh  main.py  mcp_server.py  pyproject.toml
core/: agent.py  brain.py  config.py  llm.py  memory.py  planner.py  safety.py  state_machine.py
knowledge/: ingest.py  retriever.py
knowledge/seeds/: manifest.yaml
knowledge/seeds/owasp_top10_2021/: A01_broken_access_control.md  A02_cryptographic_failures.md  A03_injection.md  A04_insecure_design.md  A05_security_misconfiguration.md  A06_vulnerable_and_outdated_components.md  A07_identification_and_authentication_failures.md  A08_software_and_data_integrity_failures.md  A09_security_logging_and_monitoring_failures.md  A10_server_side_request_forgery.md
modules/: exploit_gen.py  post_exploit.py  recon.py  reporter.py  web_scan.py
tools/: dirbust_tool.py  hash_tool.py  httpx_tool.py  jwt_tool.py  nmap_tool.py  nuclei_tool.py  page_intel_tool.py  registry.py  sqli_tool.py  ssrf_tool.py  subdomain_tool.py  web_utils.py  web_workflow_tool.py  xss_tool.py
tools/pure/: __init__.py  onedaypoc.py  port_scanner.py  vuln_checker.py
